# agent-skill-bridge

./: .gitignore  README.md  map.json  pyproject.toml
src/agent_skill_bridge/: __init__.py  cli.py  commands.py  config.py  picker.py  skills.py  usage.py
src/skillbridge/: __init__.py  cli.py  commands.py  config.py  skills.py
tests/: test_cli.py  test_config.py  test_copy_link.py  test_install.py  test_list.py  test_picker.py  test_remove.py  test_sync.py  test_usage.py
