[project]
name = "agent-skill-bridge"
version = "0.1.0"
description = "A CLI for managing AI agent skills across harnesses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
asb = "agent_skill_bridge:main"
agent-skill-bridge = "agent_skill_bridge:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
